# pyqt-google-parser

./: .gitignore  README.md  app.py  pyproject.toml  raw_ui.ui  ui.py
modules/: base.py  files.py  messages.py  photos.py  urls.py
