[tool.poetry]
name = "google-parser"
version = "0.1.0"
description = ""
authors = ["S1erra-Xray none@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
PySide6 = "^6.8.1.1"
selenium = "^4.27.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
